@@ -1,3 +1,6 @@
+Revision 90 	 2010-12-07 	 Adding move_to_archives.sh 
+Revision 89 	 2010-11-29 	 Adding fabric_bash_auto_complete 
+Revision 88 	 2010-11-22 	 Chaning crontab 
 Revision 87 	 2010-11-21 	 Mercurial related changes 
 Revision 86 	 2010-11-20 	 small typo 
 Revision 85 	 2010-11-20 	 README 
